Add projet html-css-feliz

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portifólio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&family=Roboto+Condensed:wght@300;400&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Zé Ruela Softwares</h1>
+      <!-- <img src="./Assets/logo.png" alt="" /> -->
+      <nav>
+        <a href="" lang="en">Skill</a>
+        <a href="">Projetos</a>
+        <a href="">Sobre</a>
+        <a href="">Contatos</a>
+        <a id="button" href="" lang="en">Download CV</a>
+      </nav>
+    </header>
+  </body>
+</html>
