:building_construction: Create title component
#

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/components/title.css" />
   </head>
   <body>
     <header>
-      <h1>Zé Ruela Softwares</h1>
+      <h1>Ruela Softwares</h1>
       <!-- <img src="./Assets/logo.png" alt="" /> -->
       <nav>
         <a href="" lang="en">Skill</a>
@@ -27,5 +28,6 @@
         <a id="button" href="" lang="en">Download CV</a>
       </nav>
     </header>
+    <h1>Marcio R. Oliveira</h1>
   </body>
 </html>
