--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/components/title.css" />
+    <link rel="stylesheet" href="./css/components/subtitle.css" />
   </head>
   <body>
     <header>
@@ -29,5 +30,6 @@
       </nav>
     </header>
     <h1>Marcio R. Oliveira</h1>
+    <h2>FrontEnd Developer</h2>
   </body>
 </html>
