--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/components/title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
+    <link rel="stylesheet" href="./css/components/box.css" />
   </head>
   <body>
     <header>
@@ -29,7 +30,9 @@
         <a id="button" href="" lang="en">Download CV</a>
       </nav>
     </header>
-    <h1>Marcio R. Oliveira</h1>
-    <h2>FrontEnd Developer</h2>
+    <div id="box">
+      <h1>Marcio</h1>
+      <h2>FrontEnd Developer</h2>
+    </div>
   </body>
 </html>
