--- a/index.html
+++ b/index.html
@@ -13,26 +13,32 @@
     />
 
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/components/title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
+    <link rel="stylesheet" href="./css/components/button.css" />
+    <link rel="stylesheet" href="./css/components/action.css" />
+    <link rel="stylesheet" href="./css/components/header.css" />
   </head>
   <body>
-    <header>
-      <h1>Ruela Softwares</h1>
+    <header class="header">
+      <h1 class="title">Ruela Softwares</h1>
       <!-- <img src="./Assets/logo.png" alt="" /> -->
       <nav>
-        <a href="" lang="en">Skill</a>
-        <a href="">Projetos</a>
-        <a href="">Sobre</a>
-        <a href="">Contatos</a>
-        <a id="button" href="" lang="en">Download CV</a>
+        <a class="action" href="" lang="en">Skill</a>
+        <a class="action" href="">Projetos</a>
+        <a class="action" href="">Sobre</a>
+        <a class="action" href="">Contatos</a>
+        <a class="button" href="" lang="en">Download CV</a>
       </nav>
     </header>
-    <div id="box">
-      <h1>Marcio</h1>
-      <h2>FrontEnd Developer</h2>
+
+    <div class="box">
+      <h1 class="title">Marcio</h1>
+      <h2 class="subtitle">FrontEnd Developer</h2>
     </div>
+
+    <a class="button" href="" lang="en">Download CV</a>
+    <a class="button" href="" lang="en">Contatos</a>
   </body>
 </html>
