--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/components/banner.css" />
     <link rel="stylesheet" href="./css/components/title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
@@ -32,13 +33,18 @@
         <a class="button" href="" lang="en">Download CV</a>
       </nav>
     </header>
+    <section class="banner">
+      <div class="wrapper">
+        <div class="box">
+          <h1 class="title">Marcio</h1>
+          <h2 class="subtitle">FrontEnd Developer</h2>
+        </div>
 
-    <div class="box">
-      <h1 class="title">Marcio</h1>
-      <h2 class="subtitle">FrontEnd Developer</h2>
-    </div>
-
-    <a class="button" href="" lang="en">Download CV</a>
-    <a class="button" href="" lang="en">Contatos</a>
+        <div class="navigation">
+          <a class="button" href="" lang="en">Download CV</a>
+          <a class="button" href="" lang="en">Contatos</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
