--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
         </div>
       </div>
     </section>
+    <section class="skills">
+      <div class="title -second">
+        <h3>Skills</h3>
+      </div>
+    </section>
   </body>
 </html>
