--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/components/banner.css" />
+    <link rel="stylesheet" href="./css/components/section.css" />
     <link rel="stylesheet" href="./css/components/title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
@@ -46,10 +47,8 @@
         </div>
       </div>
     </section>
-    <section class="skills">
-      <div class="title -second">
-        <h3>Skills</h3>
-      </div>
+    <section class="section">
+      <h2 class="title -second">Skills</h3>
     </section>
   </body>
 </html>
