--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     />
 
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/components/header.css" />
     <link rel="stylesheet" href="./css/components/banner.css" />
     <link rel="stylesheet" href="./css/components/section.css" />
-    <link rel="stylesheet" href="./css/components/title.css" />
+    <link rel="stylesheet" href="./css/components/button.css" />
+    <link rel="stylesheet" href="./css/components/main-title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
-    <link rel="stylesheet" href="./css/components/button.css" />
     <link rel="stylesheet" href="./css/components/action.css" />
-    <link rel="stylesheet" href="./css/components/header.css" />
+    <link rel="stylesheet" href="./css/components/skill-tec.css" />
+    <link rel="stylesheet" href="./css/components/progress-bar.css" />
   </head>
   <body>
     <header class="header">
@@ -37,7 +39,7 @@
     <section class="banner">
       <div class="wrapper">
         <div class="box">
-          <h1 class="title">Marcio</h1>
+          <h1 class="main-title">Marcio</h1>
           <h2 class="subtitle">FrontEnd Developer</h2>
         </div>
 
@@ -47,8 +49,19 @@
         </div>
       </div>
     </section>
+
     <section class="section">
-      <h2 class="title -second">Skills</h3>
+      <h2 class="main-title -second">Skills</h3>
+      
+      <article class="skill-tec">
+        <img class="icon" src="/img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+        <div class="right">
+          <h3 class="title">HTML</h3>
+          <progress class="progress-bar" max="100" value="70">
+            70%
+          </progress>
+        </div>        
+      </article>
     </section>
   </body>
 </html>
