--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
     <link rel="stylesheet" href="./css/components/action.css" />
+    <link rel="stylesheet" href="./css/components/wrapper-skill.css" />
     <link rel="stylesheet" href="./css/components/skill-tec.css" />
     <link rel="stylesheet" href="./css/components/progress-bar.css" />
   </head>
@@ -52,16 +53,81 @@
 
     <section class="section">
       <h2 class="main-title -second">Skills</h3>
-      
-      <article class="skill-tec">
-        <img class="icon" src="/img/ico_html5.png" alt="Logo do HTML5 em pixel art">
-        <div class="right">
-          <h3 class="title">HTML</h3>
-          <progress class="progress-bar" max="100" value="70">
-            70%
-          </progress>
-        </div>        
-      </article>
+
+      <div class="wrapper-skill">
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+          <div class="right">
+            <h3 class="title">HTML</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_nodejs.png" alt="Logo do NodeJS em pixel art">
+          <div class="right">
+            <h3 class="title">NodeJS</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_css3.png" alt="Logo do CSS3 em pixel art">
+          <div class="right">
+            <h3 class="title">CSS</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_tdd.png" alt="Logo do TDD em pixel art">
+          <div class="right">
+            <h3 class="title">TDD</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_js.png" alt="Logo do JavaScript em pixel art">
+          <div class="right">
+            <h3 class="title">JavaScript</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_restapi.png" alt="Logo do Rest API em pixel art">
+          <div class="right">
+            <h3 class="title">Rest API</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_react.png" alt="Logo do React em pixel art">
+          <div class="right">
+            <h3 class="title">React</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+        <article class="skill-tec">
+          <img class="icon" src="/img/ico_ux.png" alt="Logo do UX em pixel art">
+          <div class="right">
+            <h3 class="title">UX</h3>
+            <progress class="progress-bar" max="100" value="70">
+              70%
+            </progress>
+          </div>        
+        </article>
+      </div>
     </section>
   </body>
 </html>
