--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="./css/components/wrapper-skill.css" />
     <link rel="stylesheet" href="./css/components/skill-tec.css" />
     <link rel="stylesheet" href="./css/components/progress-bar.css" />
+    <link rel="stylesheet" href="./css/components/card-project.css" />
+
   </head>
   <body>
     <header class="header">
@@ -128,6 +130,19 @@
           </div>        
         </article>
       </div>
+    </section>
+
+    <section class="section">
+      <h2 class="main-title -second">Projetos</h3>
+       <figure class="card-project">
+        <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
+       </figure>
+       <figure class="card-project -blue">
+        <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+       </figure>
+       <figure class="card-project">
+        <img class="logo" src="img/portfolio.png" alt="Logo da Portifolio">
+       </figure>
     </section>
   </body>
 </html>
