--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section -bgBlack -bdFirst">
       <h2 class="main-title -second">Projetos</h3>
        <figure class="card-project">
         <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
