--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/components/skill-tec.css" />
     <link rel="stylesheet" href="./css/components/progress-bar.css" />
     <link rel="stylesheet" href="./css/components/card-project.css" />
+    <link rel="stylesheet" href="./css/components/wrapper-card.css" />
 
   </head>
   <body>
@@ -134,15 +135,17 @@
 
     <section class="section -bgBlack -bdFirst">
       <h2 class="main-title -second">Projetos</h3>
-       <figure class="card-project">
-        <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
-       </figure>
-       <figure class="card-project -blue">
-        <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
-       </figure>
-       <figure class="card-project">
-        <img class="logo" src="img/portfolio.png" alt="Logo da Portifolio">
-       </figure>
+      <div class="wrapper-card">
+         <figure class="card-project">
+          <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
+         </figure>
+         <figure class="card-project -blue">
+          <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+         </figure>
+         <figure class="card-project">
+          <img class="logo" src="img/portfolio.png" alt="Logo da Portifolio">
+         </figure>
+      </div>
     </section>
   </body>
 </html>
