--- a/index.html
+++ b/index.html
@@ -134,17 +134,26 @@
     </section>
 
     <section class="section -bgBlack -bdFirst">
-      <h2 class="main-title -second">Projetos</h3>
+
+      <h2 class="main-title -second">Projetos</h3>        
       <div class="wrapper-card">
-         <figure class="card-project">
-          <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
-         </figure>
-         <figure class="card-project -blue">
-          <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
-         </figure>
-         <figure class="card-project">
-          <img class="logo" src="img/portfolio.png" alt="Logo da Portifolio">
-         </figure>
+        <a href="#" target="_blank">
+          <figure class="card-project">
+           <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
+          </figure>
+        </a>
+
+        <a href="#" target="_blank">
+          <figure class="card-project -blue">
+           <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+          </figure>
+        </a>
+
+        <a href="#" target="_blank">
+          <figure class="card-project">
+           <img class="logo" src="img/portfolio.png" alt="Logo da Portifolio">
+          </figure>
+        </a>
       </div>
     </section>
   </body>
