--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/components/main-title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
-    <link rel="stylesheet" href="./css/components/action.css" />
+    <link rel="stylesheet" href="./css/components/main-action.css" />
     <link rel="stylesheet" href="./css/components/wrapper-skill.css" />
     <link rel="stylesheet" href="./css/components/skill-tec.css" />
     <link rel="stylesheet" href="./css/components/progress-bar.css" />
@@ -33,10 +33,10 @@
       <h1 class="title">Ruela Softwares</h1>
       <!-- <img src="./Assets/logo.png" alt="" /> -->
       <nav>
-        <a class="action" href="" lang="en">Skill</a>
-        <a class="action" href="">Projetos</a>
-        <a class="action" href="">Sobre</a>
-        <a class="action" href="">Contatos</a>
+        <a class="main-action" href="" lang="en">Skill</a>
+        <a class="main-action" href="">Projetos</a>
+        <a class="main-action" href="">Sobre</a>
+        <a class="main-action" href="">Contatos</a>
         <a class="button" href="" lang="en">Download CV</a>
       </nav>
     </header>
