--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/components/header.css" />
     <link rel="stylesheet" href="./css/components/main-banner.css" />
     <link rel="stylesheet" href="./css/components/section.css" />
-    <link rel="stylesheet" href="./css/components/button.css" />
+    <link rel="stylesheet" href="./css/components/main-button.css" />
     <link rel="stylesheet" href="./css/components/main-title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
     <link rel="stylesheet" href="./css/components/box.css" />
@@ -37,7 +37,7 @@
         <a class="main-action" href="">Projetos</a>
         <a class="main-action" href="">Sobre</a>
         <a class="main-action" href="">Contatos</a>
-        <a class="button" href="" lang="en">Download CV</a>
+        <a class="main-button" href="" lang="en">Download CV</a>
       </nav>
     </header>
     <section class="main-banner">
@@ -48,8 +48,8 @@
         </div>
 
         <div class="navigation">
-          <a class="button" href="" lang="en">Download CV</a>
-          <a class="button" href="" lang="en">Contatos</a>
+          <a class="main-button" href="" lang="en">Download CV</a>
+          <a class="main-button" href="" lang="en">Contatos</a>
         </div>
       </div>
     </section>
@@ -158,3 +158,4 @@
     </section>
   </body>
 </html>
+  
