--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/components/header.css" />
     <link rel="stylesheet" href="./css/components/main-banner.css" />
-    <link rel="stylesheet" href="./css/components/section.css" />
+    <link rel="stylesheet" href="./css/components/main-section.css" />
     <link rel="stylesheet" href="./css/components/main-button.css" />
     <link rel="stylesheet" href="./css/components/main-title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
@@ -54,7 +54,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="main-section">
       <h2 class="main-title -second">Skills</h3>
 
       <div class="wrapper-skill">
@@ -133,7 +133,7 @@
       </div>
     </section>
 
-    <section class="section -bgBlack -bdFirst">
+    <section class="main-section -bgBlack -bdFirst">
 
       <h2 class="main-title -second">Projetos</h3>        
       <div class="wrapper-card">
@@ -158,4 +158,3 @@
     </section>
   </body>
 </html>
-  
