--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/components/main-button.css" />
     <link rel="stylesheet" href="./css/components/main-title.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
-    <link rel="stylesheet" href="./css/components/box.css" />
+    <link rel="stylesheet" href="./css/components/main-box.css" />
     <link rel="stylesheet" href="./css/components/main-action.css" />
     <link rel="stylesheet" href="./css/components/wrapper-skill.css" />
     <link rel="stylesheet" href="./css/components/skill-tec.css" />
@@ -42,7 +42,7 @@
     </header>
     <section class="main-banner">
       <div class="wrapper">
-        <div class="box">
+        <div class="main-box">
           <h1 class="main-title">Marcio</h1>
           <h2 class="subtitle">FrontEnd Developer</h2>
         </div>
