--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/components/header.css" />
+    <link rel="stylesheet" href="./css/components/main-header.css" />
     <link rel="stylesheet" href="./css/components/main-banner.css" />
     <link rel="stylesheet" href="./css/components/main-section.css" />
     <link rel="stylesheet" href="./css/components/main-button.css" />
@@ -29,7 +29,7 @@
 
   </head>
   <body>
-    <header class="header">
+    <header class="main-header">
       <h1 class="title">Ruela Softwares</h1>
       <!-- <img src="./Assets/logo.png" alt="" /> -->
       <nav>
