--- a/index.html
+++ b/index.html
@@ -156,5 +156,14 @@
         </a>
       </div>
     </section>
+    <section class="main-section">
+      <h2 class="main-title -second">Sobre</h2>
+      <p class="main-description">
+        Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contábilidade, professor de informatica e músico, entrou na área de TI como técnico de informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
+      </p>
+      <button class="button-arrow -right">Voltar</button>
+      <button class="button-arrow -left">Avançar</button>
+
+    </section>
   </body>
 </html>
