:lipstick: Add main-description component

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./css/components/progress-bar.css" />
     <link rel="stylesheet" href="./css/components/card-project.css" />
     <link rel="stylesheet" href="./css/components/wrapper-card.css" />
+    <link rel="stylesheet" href="./css/components/main-description.css" />
     <link rel="stylesheet" href="./css/components/button-arrow.css" />
 
   </head>
@@ -160,7 +161,7 @@
     <section class="main-section -bdBlack -bgSecond">
       <h2 class="main-title -second">Sobre</h2>
       <p class="main-description">
-        Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contábilidade, professor de informatica e músico, entrou na área de TI como técnico de informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
+        Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contabilidade, professor de informatica e músico, entrou na área de TI como técnico de informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
       </p>
       <button class="button-arrow -right">Voltar</button>
       <button class="button-arrow -left">Avançar</button>
