:lipstick: Add button-arrow component and arrows with border

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 
       <h2 class="main-title -second">Projetos</h3>        
       <div class="wrapper-card">
-        <a href="#" target="_blank">
+        <a href="https://marcioliveira.github.io/salao" target="_blank">
           <figure class="card-project">
            <img class="logo" src="img/logo-firedlabs.svg" alt="Logo da FiredLabs">
           </figure>
         </a>
 
-        <a href="#" target="_blank">
+        <a href="https://letmeask-96e28.web.app" target="_blank">
           <figure class="card-project -blue">
            <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
           </figure>
@@ -161,10 +161,10 @@
     <section class="main-section -bdBlack -bgSecond">
       <h2 class="main-title -second">Sobre</h2>
       <p class="main-description">
-        Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contabilidade, professor de informatica e músico, entrou na área de TI como técnico de informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
+        Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contabilidade, professor de informatica e músico, entrou na área de TI como técnico em informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
       </p>
-      <button class="button-arrow -right">Voltar</button>
-      <button class="button-arrow -left">Avançar</button>
+      <button class="button-arrow -left"><span class="content">Avançar</span></button>
+      <button class="button-arrow -right"><span class="content">Voltar</span></button>
 
     </section>
   </body>
