--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./css/components/wrapper-card.css" />
     <link rel="stylesheet" href="./css/components/main-description.css" />
     <link rel="stylesheet" href="./css/components/button-arrow.css" />
+    <link rel="stylesheet" href="./css/components/node-card.css" />
 
   </head>
   <body>
@@ -163,10 +164,13 @@
       <p class="main-description">
         Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contabilidade, professor de informatica e músico, entrou na área de TI como técnico em informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
       </p>
+      
       <button class="button-arrow -left"><span class="content">Avançar</span></button>
       <figure class="node-card">
         <figcaption class="title">2012</figcaption>
-        <img src="./img/logo-locaweb.png" alt="" class="logo">
+        <div class="logo">
+          <img src="./img/logo-locaweb.png" alt="">
+        </div>
       </figure>
       <button class="button-arrow -right"><span class="content">Voltar</span></button>
 
