:bug: Show logo-collabcode

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <figure class="node-card">
         <figcaption class="title">2019</figcaption>
         <div class="logo">
-          <img src="./Asset/logo-collabcode.png" alt="Logo da Collabcode">
+          <img src="./Assets/logo-collabcode.png" alt="Logo da Collabcode">
         </div>
       </figure>
 
