:lipstick: Add node-card -clean component variation

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </figure>
 
       
-      <figure class="node-card">
+      <figure class="node-card -clean">
         <figcaption class="title">2014</figcaption>
         <div class="logo">
           <img src="./img/logo-caelum.png" alt="Logo da Caelum">
@@ -188,7 +188,7 @@
         </div>
       </figure>
       
-      <figure class="node-card">
+      <figure class="node-card -clean">
         <figcaption class="title">2017</figcaption>
         <div class="logo">
           <img src="./img/logo-caelum.png" alt="Logo da Caelum">
