--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
       </figure>
       
-      <figure class="node-card">
+      <figure class="node-card -first">
         <figcaption class="title">2016</figcaption>
         <div class="logo">
           <img src="./img/logo-getninjas.png" alt="Logo da Getninjas">
@@ -202,7 +202,7 @@
         </div>
       </figure>
 
-      <figure class="node-card">
+      <figure class="node-card -first">
         <figcaption class="title">2019</figcaption>
         <div class="logo">
           <img src="./Assets/logo-collabcode.png" alt="Logo da Collabcode">
