:lipstick: Add position of the carousel button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./css/components/main-description.css" />
     <link rel="stylesheet" href="./css/components/button-arrow.css" />
     <link rel="stylesheet" href="./css/components/node-card.css" />
+    <link rel="stylesheet" href="./css/components/main-carousel.css">
 
   </head>
   <body>
@@ -164,7 +165,7 @@
       <p class="main-description">
         Hoje, desenvolvedor FrontEnd Junior, freelancer, com formação acadêmica em Tecnologia em Análise e Desenvolvimento de Sistemas, Marcio já trabalhou nas mais diversas áreas como esporte, logística, imóveis, contabilidade, professor de informatica e músico, entrou na área de TI como técnico em informática, gosta de  ir descobrindo seu caminho conforme o percorre. Apaixonado pela arte de programar. Programar o seu objetivo através da tecnologia. 
       </p>
-      
+      <section class="main-carousel">
       <button class="button-arrow -left"><span class="content">Avançar</span></button>
       <figure class="node-card">
         <figcaption class="title">2012</figcaption>
@@ -210,6 +211,7 @@
       </figure>
 
       <button class="button-arrow -right"><span class="content">Voltar</span></button>
+    </section>
 
     </section>
   </body>
