:bricks: Create contact-section

--- a/index.html
+++ b/index.html
@@ -238,6 +238,20 @@
 
     </section>
 
+    <section class="main-section">
+      <h2 class="main-title">Contatos</h2>
+
+      <form action="submit" class="form">
+        <label class="main-label" for="name">Nome:</label>
+        <input class="main-input" id="name" type="text" name="name" required>
+        <label class="main-label" for="email">Email:</label>
+        <input class="main-input" id="email" type="email" name="name" required>
+        <label class="main-label" for="message">Mensagem:</label>
+        <textarea name="" class="main-input -textarea" id="message" required></textarea>
+        <input type="submit" value="Enviar" class="main-button">
+      </form>
+      
+    </section>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
