--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="./css/components/main-label.css">
     <link rel="stylesheet" href="./css/components/main-input.css">
     <link rel="stylesheet" href="./css/components/wrapper-form.css">
-
-
+    <link rel="stylesheet" href="./css/components/main-footer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">        
 
   </head>
   <body>
@@ -259,6 +259,10 @@
       </div>
       
     </section>
+    <footer class="main-footer">
+      <a href="https://github.com/marcioliveira" target="_blank"><i class="devicon-github-original"></i></a>
+      <a href="https://www.linkedin.com/in/marcio-ruela-de-oliveira-a08b0b206/"><i class="devicon-linkedin-plain"></i></a>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
