:bricks: Add id in sections

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <h1 class="title">Ruela Softwares</h1>
       <!-- <img src="./Assets/logo.png" alt="" /> -->
       <nav>
-        <a class="main-action" href="" lang="en">Skill</a>
-        <a class="main-action" href="">Projetos</a>
-        <a class="main-action" href="">Sobre</a>
-        <a class="main-action" href="">Contatos</a>
+        <a class="main-action" href="#skills" lang="en">Skill</a>
+        <a class="main-action" href="#projects">Projetos</a>
+        <a class="main-action" href="#about">Sobre</a>
+        <a class="main-action" href="#contacts">Contatos</a>
         <a class="main-button" href="" lang="en">Download CV</a>
       </nav>
     </header>
@@ -63,7 +63,7 @@
       </div>
     </section>
 
-    <section class="main-section">
+    <section id="skills" class="main-section">
       <h2 class="main-title -second">Skills</h3>
 
       <div class="wrapper-skill">
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <section class="main-section -bgBlack -bdFirst">
+    <section id="projects" class="main-section -bgBlack -bdFirst">
 
       <h2 class="main-title -second">Projetos</h3>        
       <div class="wrapper-card">
@@ -165,8 +165,8 @@
         </a>
       </div>
     </section>
-    <section class="main-section -bdBlack -bgSecond">
 
+    <section id="about" class="main-section -bdBlack -bgSecond">
       <h2 class="main-title -second">Sobre</h2>
 
       <section class="main-carousel">
@@ -243,7 +243,7 @@
 
     </section>
 
-    <section class="main-section -bgBlackSecond">
+    <section id="contacts" class="main-section -bgBlackSecond">
       <legend class="main-title -second">Contato</legend>
       
       <div class="wrapper-form">
